# GetMother

./: .gitignore  README.md  index.html  server.hs
auth/: auth.cabal  package.yaml  stack.yaml
frontend/: package.json
frontend/src/: App.js  AppRouter.js  index.js
frontend/src/components/home/: Home.js
frontend/src/components/login/: Login.js
frontend/src/components/logo/: Logo.js
frontend/src/components/menu/: NavBar.js
frontend/src/components/modal/: Modal.js
frontend/src/utils/: Themes.js
images/: ImageServer.hs  index.html
metadata/: mother.json
motherbot/: Main.hs  README.md  ResponseJson.hs  index.html
