cabal-version:      2.4
name:               auth
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Yu MOTOJIMA
maintainer:         test@gmail.com

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.14, monad-logger, persistent, persistent-sqlite, esqueleto
    hs-source-dirs:   src
    default-language: Haskell2010